Text and TextBuilder removed 'cause its not needed